Prepared for translation. Minor improvements.
Signed-off-by: Rasbats <miker@members.swis.net>

--- a/po/fi.po
+++ b/po/fi.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-02-27 09:53-0300\n"
+"POT-Creation-Date: 2017-08-09 08:13+0100\n"
 "PO-Revision-Date: 2016-02-27 08:04-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Finnish\n"
@@ -15,129 +15,50 @@ msgstr ""
 "X-Crowdin-Project: opencpn\n"
 "X-Crowdin-Language: fi\n"
 "X-Crowdin-File: /plugins/DR_pi/po/DR_pi.pot\n"
-
-#: src/DR_pi.cpp:103 src/DR_pi.cpp:174 src/DRgui.h:58 src/DRgui_impl.cpp:170
-msgid "DR"
+#
+msgid "API key :"
 msgstr ""
-
-#: src/DR_pi.cpp:180
-msgid "DR Positions"
+#
+msgid "Directory for saving chart downloads :"
 msgstr ""
-
-#: src/DR_pi.cpp:185
-msgid "Creates GPX files with\n"
-"DR Positions"
+#
+msgid ""
+"Directory for saving the chart does not exist \n"
+"Please use preferences to select/create a valid directory"
 msgstr ""
-
-#: src/DR_pi.cpp:271
-msgid "Route Preferences"
+#
+msgid "Download Satellite Charts from VentureFarther.com"
 msgstr ""
-
-#: src/DRgui.cpp:21
-msgid "DR Options"
+#
+msgid "Download complete"
 msgstr ""
-
-#: src/DRgui.cpp:33
-msgid "Speed             "
+#
+msgid "Download failed"
 msgstr ""
-
-#: src/DRgui.cpp:41
-msgid "kts"
+#
+msgid ""
+"Download failed.\n"
+"\n"
+"Do you have enough credit with VentureFarther?"
 msgstr ""
-
-#: src/DRgui.cpp:51
-msgid "Interval"
+#
+msgid "Generate Chart"
 msgstr ""
-
-#: src/DRgui.cpp:55
-msgid "0"
+#
+msgid "Please enter your API key in Preferences"
 msgstr ""
-
-#: src/DRgui.cpp:55
-msgid "1"
+#
+msgid "Satellite Chart Source :"
 msgstr ""
-
-#: src/DRgui.cpp:55
-msgid "2"
+#
+msgid "Select a folder"
 msgstr ""
-
-#: src/DRgui.cpp:55
-msgid "3"
+#
+msgid "Status :"
 msgstr ""
-
-#: src/DRgui.cpp:55
-msgid "4"
+#
+msgid "VentureFarther Satellite Charts"
 msgstr ""
-
-#: src/DRgui.cpp:55
-msgid "5"
+#
+msgid "Waiting to download chart                                 "
 msgstr ""
-
-#: src/DRgui.cpp:55
-msgid "6"
-msgstr ""
-
-#: src/DRgui.cpp:61
-msgid "Hours"
-msgstr ""
-
-#: src/DRgui.cpp:71
-msgid "Generate &GPX"
-msgstr ""
-
-#: src/DRgui.cpp:86
-msgid "Route Name"
-msgstr ""
-
-#: src/DRgui.cpp:126
-msgid "General settings"
-msgstr ""
-
-#: src/DRgui.cpp:133
-msgid "Speed"
-msgstr ""
-
-#: src/DRgui.cpp:144
-msgid "DR Interval"
-msgstr ""
-
-#: src/DRgui.h:78 src/DRgui_impl.h:52
-msgid "DR preferences"
-msgstr ""
-
-#: src/DRgui_impl.cpp:98
-msgid "Import GPX Route file"
-msgstr ""
-
-#: src/DRgui_impl.cpp:122
-msgid "Failed to load file: "
-msgstr ""
-
-#: src/DRgui_impl.cpp:127
-msgid "rte Invalid xml file"
-msgstr ""
-
-#: src/DRgui_impl.cpp:141
-msgid "Route"
-msgstr ""
-
-#: src/DRgui_impl.cpp:141
-msgid "Loading"
-msgstr ""
-
-#: src/DRgui_impl.cpp:201
-msgid "Export DR Positions in GPX file as"
-msgstr ""
-
-#: src/DRgui_impl.cpp:217
-msgid "error in input range validation"
-msgstr ""
-
-#: src/DRgui_impl.cpp:460 src/DRgui_impl.cpp:461
-msgid "Error in calculation. Please check input!"
-msgstr ""
-
-#: src/DRgui_impl.h:58
-msgid "DR Plugin"
-msgstr ""
-
