--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-08-29 12:55+0100\n"
-"PO-Revision-Date: 2016-02-27 08:04-0500\n"
+"POT-Creation-Date: 2017-11-14 08:25+0000\n"
+"PO-Revision-Date: 2017-11-26 13:50-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: German\n"
 "Language: de_DE\n"
@@ -14,97 +14,205 @@ msgstr ""
 "X-Generator: crowdin.com\n"
 "X-Crowdin-Project: opencpn\n"
 "X-Crowdin-Language: de\n"
-"X-Crowdin-File: /plugins/DR_pi/po/DR_pi.pot\n"
-#
-msgid ""
-"At the end of the download session:\n"
-"Go to Toolbox-> Charts->Chart Files\n"
-"Select Scan Charts and Update Database"
-msgstr ""
-#
-msgid "Cannot create file '"
-msgstr ""
-#
-msgid "Cannot open file '"
-msgstr ""
-#
-msgid "Cannot read zip entry '"
-msgstr ""
-#
-msgid "Delete the last download"
-msgstr ""
-#
-msgid ""
-"Directory for saving the chart does not exist \n"
-"Please use preferences to select/create a valid directory"
-msgstr ""
-#
+"X-Crowdin-File: /plugins/vfkaps_pi/po/vfkaps_pi.pot\n"
+
+#: src/vfkaps_pi.cpp:103
+msgid "VentureFarther Satellite Charts"
+msgstr "VentureFarther Sat-Karten"
+
+#: src/vfkaps_pi.cpp:184
 msgid "Download Satellite Charts from VentureFarther.com"
-msgstr ""
-#
-msgid "Download complete, about to extract the charts"
-msgstr ""
-#
-msgid "Download complete, waiting for extraction"
-msgstr ""
-#
-msgid "Download failed"
-msgstr ""
-#
-msgid ""
-"Download failed.\n"
-"\n"
-"Do you have enough credit with VentureFarther?"
-msgstr ""
-#
+msgstr "Sat-Karten von VentureFarther.com herunterladen"
+
+#: src/vfkaps_pi.cpp:227 src/vfkapsgui.cpp:40 src/vfkapsgui_impl.cpp:101
 msgid "Generate Chart"
-msgstr ""
-#
-msgid "Generate Multi-Charts"
-msgstr ""
-#
-msgid ""
-"Go to Toolbox-> Charts->Chart Files\n"
-"Select Scan Charts and Update Database"
-msgstr ""
-#
-msgid "Have you downloaded any charts in this session?"
-msgstr ""
-#
-msgid "Please choose/create your satellite chart directory in Preferences"
-msgstr ""
-#
-msgid "Please enter your API key in Preferences"
-msgstr ""
-#
+msgstr "Karten erstellen"
+
+#: src/vfkaps_pi.cpp:228 src/vfkapsgui_impl.cpp:102
 msgid "Ready for chart download"
-msgstr ""
-#
+msgstr "Zum Karten Herunterladen bereit"
+
+#: src/vfkaps_pi.cpp:230 src/vfkapsgui_impl.cpp:104
+msgid "Generate Multi-Charts"
+msgstr "Vielfach-Karten erstellen"
+
+#: src/vfkaps_pi.cpp:231 src/vfkapsgui_impl.cpp:105
 msgid "Ready for multi-chart download"
-msgstr ""
-#
+msgstr "Zum Vielfach-Karten Herunterladen bereit"
+
+#: src/vfkaps_pi.cpp:233 src/vfkapsgui_impl.cpp:107
+msgid "Ready for marker chart download"
+msgstr "Bereit zum Herunterladen von Karten mit Einzelpunkten"
+
+#: src/vfkapsgui.cpp:28 src/vfkapsgui.cpp:123
+msgid "Satellite Chart Source :"
+msgstr "Quelle der Sat-Karten:"
+
+#: src/vfkapsgui.cpp:43 src/vfkapsgui.cpp:138 src/vfkapsgui.cpp:246
+msgid "..... Delete last download ....."
+msgstr "..... Das letzte Download löschen ....."
+
+#: src/vfkapsgui.cpp:102 src/vfkapsgui.cpp:197 src/vfkapsgui.cpp:249
+msgid "Status :"
+msgstr "Status :"
+
+#: src/vfkapsgui.cpp:116
+msgid "Single Chart"
+msgstr "Einzelkarte"
+
+#: src/vfkapsgui.cpp:135
+msgid "Generate Multi-Chart"
+msgstr "Vielfach-Karten erstellen"
+
+#: src/vfkapsgui.cpp:211
+msgid "Multi-Chart"
+msgstr "Vielfach-Karten"
+
+#: src/vfkapsgui.cpp:223
+msgid "Anchorage Charts :"
+msgstr "Ankerfeld Karten:"
+
+#: src/vfkapsgui.cpp:232
+msgid "Select"
+msgstr "Auswählen"
+
+#: src/vfkapsgui.cpp:243
+msgid "Generate"
+msgstr "Erzeugen"
+
+#: src/vfkapsgui.cpp:266
+msgid "Country Anchorage Charts"
+msgstr "Länder Ankerfeldkarten"
+
+#: src/vfkapsgui.cpp:338
+msgid "Directory for saving chart downloads :"
+msgstr "Verzeichnis zum Speichern der Karten-Downloads:"
+
+#: src/vfkapsgui.cpp:347
+msgid "Select a folder"
+msgstr "Ordner auswählen"
+
+#: src/vfkapsgui.cpp:353
+msgid "API key :"
+msgstr "API-Schlüssel:"
+
+#: src/vfkapsgui_impl.cpp:169
+msgid "Surrounding charts are not available at this scale\n"
+"Please zoom in closer or use the single chart page\n\n"
+"Chart scale needs to be less than 1:300000"
+msgstr "Die benachbarten Karten sind für diesem Maßstab nicht verfügbar.\n"
+" Zoomen Sie weiter hinein oder verwenden Sie die Einzelkarten.\n\n"
+"Der Karten-Maßstab muss kleiner als 1:300000 sein"
+
+#: src/vfkapsgui_impl.cpp:195 src/vfkapsgui_impl.cpp:1120
+msgid "Please enter your API key in Preferences"
+msgstr "Bitte geben Sie Ihren API-Schlüssel in den Einstellungen ein"
+
+#: src/vfkapsgui_impl.cpp:200 src/vfkapsgui_impl.cpp:1125
+msgid "Please choose/create your satellite chart directory in Preferences"
+msgstr "Bitte wählen oder erstellen Sie Ihr Sat-Karten Verzeichnis in Einstellungen"
+
+#: src/vfkapsgui_impl.cpp:235 src/vfkapsgui_impl.cpp:1177
+msgid "Directory for saving the chart does not exist \n"
+"Please use preferences to select/create a valid directory"
+msgstr "Das Verzeichnis zum Speichern der Karten ist nicht vorhanden\n"
+"Bitte wählen/erstellen Sie das Verzeichnis in Einstellungen"
+
+#: src/vfkapsgui_impl.cpp:245
+msgid "Multi-Charts are not available at this very large scale\n"
+"Please zoom out a little"
+msgstr "Vielfach-Karten sind für diesen großen Maßstab nicht verfügbar.\n"
+"Bitte ein wenig heraus zoomen"
+
+#: src/vfkapsgui_impl.cpp:265 src/vfkapsgui_impl.cpp:267
+msgid "Download aborted"
+msgstr "Download abgebrochen"
+
+#: src/vfkapsgui_impl.cpp:274 src/vfkapsgui_impl.cpp:965
+msgid "Download failed.\n\n"
+"Do you have enough credit with VentureFarther?\n"
+"Are you connected to the Internet?"
+msgstr "Download ist fehlgeschlagen.\n\n"
+"Haben Sie einen ausreichendes \"Guthaben\" bei VentureFarther?\n"
+"Haben Sie eine Internetverbindung?"
+
+#: src/vfkapsgui_impl.cpp:277 src/vfkapsgui_impl.cpp:279
+#: src/vfkapsgui_impl.cpp:1207
+msgid "Download failed"
+msgstr "Download fehlgeschlagen"
+
+#: src/vfkapsgui_impl.cpp:286 src/vfkapsgui_impl.cpp:288
+msgid "Download complete, about to extract charts"
+msgstr "Download beendet, Karten werden extrahiert."
+
+#: src/vfkapsgui_impl.cpp:541 src/vfkapsgui_impl.cpp:545
+#: src/vfkapsgui_impl.cpp:549
 #, c-format
 msgid "Satellite Charts extracted to %s"
-msgstr ""
-#
-msgid ""
-"Surrounding charts are not available at this scale\n"
-"Please use preferences to change to single chart mode"
-msgstr ""
-#
+msgstr "Sat Karten zu %s extrahiert"
+
+#: src/vfkapsgui_impl.cpp:560 src/vfkapsgui_impl.cpp:562
+#: src/vfkapsgui_impl.cpp:564
 msgid "Unable to extract the charts"
-msgstr ""
-#
-msgid "VentureFarther Satellite Charts"
-msgstr ""
-#
-msgid "Waiting for chart download"
-msgstr ""
-#
-msgid "Waiting for multi-chart download"
-msgstr ""
-#
-msgid ""
-"You have chosen to delete the charts from the last download\n"
+msgstr "Die Karten konnten nicht extrahiert werden"
+
+#: src/vfkapsgui_impl.cpp:585
+msgid "Cannot open file '"
+msgstr "Kann Datei nicht öffnen '"
+
+#: src/vfkapsgui_impl.cpp:607
+msgid "Cannot read zip entry '"
+msgstr "Zip-Eintrag kann nicht gelesen werden '"
+
+#: src/vfkapsgui_impl.cpp:615
+msgid "Cannot create file '"
+msgstr "Datei konnte nicht erstellt werden '"
+
+#: src/vfkapsgui_impl.cpp:642
+msgid "At the end of the download session:\n"
+"Go to Toolbox-> Charts->Chart Files\n"
+"Select Scan Charts and Update Database"
+msgstr "Nach Beendigung des Downloads:\n"
+"Gehe zuWerzeuge|Karten|Karten-Dateien und\n"
+"wähle \"Scanne Karten und erneuere Datenbank\" aus"
+
+#: src/vfkapsgui_impl.cpp:924
+msgid "Have you downloaded any charts in this session?"
+msgstr "Haben Sie keine Karten in dieser Sitzung heruntergeladen?"
+
+#: src/vfkapsgui_impl.cpp:928
+msgid "You have chosen to delete the charts from the last download\n"
 "Do you wish to continue?"
-msgstr ""
+msgstr "Sie haben ausgewählt, die Karten aus dem letzten Download zu löschen\n"
+"Möchten Sie fortfahren?"
+
+#: src/vfkapsgui_impl.cpp:929
+msgid "Delete the last download"
+msgstr "Das letzte Download löschen"
+
+#: src/vfkapsgui_impl.cpp:943
+msgid "Go to Toolbox-> Charts->Chart Files\n"
+"Select Scan Charts and Update Database"
+msgstr "Gehen Sie zur Werkzeuge|karten|Karten-Dateien\n"
+"Wählen Sie \"Scanne Karten und erneuere Datenbank\""
+
+#: src/vfkapsgui_impl.cpp:997
+msgid "fail"
+msgstr "gescheitert"
+
+#: src/vfkapsgui_impl.cpp:1042 src/vfkapsgui_impl.cpp:1206
+msgid "Download failed.\n\n"
+"Do you have enough credit with VentureFarther?"
+msgstr "Download ist fehlgeschlagen.\n\n"
+"Haben Sie genügend \"Guthaben/Kredit\" bei VentureFarther?"
+
+#: src/vfkapsgui_impl.cpp:1078
+msgid "Clear ALL selections ..."
+msgstr "ALLE Auswahlen aufheben..."
+
+#: src/vfkapsgui_impl.cpp:1211
+msgid "Download complete\n"
+"about to extract the charts"
+msgstr "Download beendet,\n"
+"Karten werden extrahiert"
+
