--- a/po/fi_FI.po
+++ b/po/fi_FI.po
@@ -15,202 +15,177 @@ msgstr ""
 "X-Crowdin-Project: opencpn\n"
 "X-Crowdin-Language: fi\n"
 "X-Crowdin-File: /plugins/vfkaps_pi/po/vfkaps_pi.pot\n"
-
-#: src/vfkaps_pi.cpp:103
-msgid "VentureFarther Satellite Charts"
-msgstr "VentureFarther Satelliitti Kartat"
-
-#: src/vfkaps_pi.cpp:184
-msgid "Download Satellite Charts from VentureFarther.com"
-msgstr "Lataa Satelliitti Kartat VentureFarther.com:sta"
-
-#: src/vfkaps_pi.cpp:227 src/vfkapsgui.cpp:40 src/vfkapsgui_impl.cpp:101
-msgid "Generate Chart"
-msgstr "Luo kartat"
-
-#: src/vfkaps_pi.cpp:228 src/vfkapsgui_impl.cpp:102
-msgid "Ready for chart download"
-msgstr "Valmiina lataamaan kartat"
-
-#: src/vfkaps_pi.cpp:230 src/vfkapsgui_impl.cpp:104
-msgid "Generate Multi-Charts"
-msgstr "Luo monikartastot"
-
-#: src/vfkaps_pi.cpp:231 src/vfkapsgui_impl.cpp:105
-msgid "Ready for multi-chart download"
-msgstr "Valmiina lataamaan monikartastot"
-
-#: src/vfkaps_pi.cpp:233 src/vfkapsgui_impl.cpp:107
-msgid "Ready for marker chart download"
-msgstr "Valmiina lataamaan merkintäkartan"
-
-#: src/vfkapsgui.cpp:28 src/vfkapsgui.cpp:123
-msgid "Satellite Chart Source :"
-msgstr "Satelliitti kartta lähde:"
-
-#: src/vfkapsgui.cpp:43 src/vfkapsgui.cpp:138 src/vfkapsgui.cpp:246
+#
 msgid "..... Delete last download ....."
 msgstr "..... Poista viimeinen lataus....."
-
-#: src/vfkapsgui.cpp:102 src/vfkapsgui.cpp:197 src/vfkapsgui.cpp:249
-msgid "Status :"
-msgstr "Tila :"
-
-#: src/vfkapsgui.cpp:116
-msgid "Single Chart"
-msgstr "Yksi kartta"
-
-#: src/vfkapsgui.cpp:135
-msgid "Generate Multi-Chart"
-msgstr "Luo monikartasto"
-
-#: src/vfkapsgui.cpp:211
-msgid "Multi-Chart"
-msgstr "Monikartasto"
-
-#: src/vfkapsgui.cpp:223
-msgid "Anchorage Charts :"
-msgstr "Ankkurointikartat :"
-
-#: src/vfkapsgui.cpp:232
-msgid "Select"
-msgstr "Valitse"
-
-#: src/vfkapsgui.cpp:243
-msgid "Generate"
-msgstr "Luo"
-
-#: src/vfkapsgui.cpp:266
-msgid "Country Anchorage Charts"
-msgstr "Maan Ankkurointikartat"
-
-#: src/vfkapsgui.cpp:338
-msgid "Directory for saving chart downloads :"
-msgstr "Karttalatausten tallennuskansio :"
-
-#: src/vfkapsgui.cpp:347
-msgid "Select a folder"
-msgstr "Valitse kansio"
-
-#: src/vfkapsgui.cpp:353
+#
 msgid "API key :"
 msgstr "API avain :"
-
-#: src/vfkapsgui_impl.cpp:169
-msgid "Surrounding charts are not available at this scale\n"
-"Please zoom in closer or use the single chart page\n\n"
-"Chart scale needs to be less than 1:300000"
-msgstr "Ympäristökartat eivät ole käytettävissä tässä mittakaavassa, zoomaa lähemmäksi tai käytä yksittäiskarttasivua \n\n"
-"Mittakaavan on oltava alle 1:300000"
-
-#: src/vfkapsgui_impl.cpp:195 src/vfkapsgui_impl.cpp:1120
-msgid "Please enter your API key in Preferences"
-msgstr "Kirjoita API avain asetuksiisi"
-
-#: src/vfkapsgui_impl.cpp:200 src/vfkapsgui_impl.cpp:1125
-msgid "Please choose/create your satellite chart directory in Preferences"
-msgstr "Valitse/Luo Satelliittikarttahakemistosi asetuksiin"
-
-#: src/vfkapsgui_impl.cpp:235 src/vfkapsgui_impl.cpp:1177
-msgid "Directory for saving the chart does not exist \n"
+#
+msgid "Anchorage Charts :"
+msgstr "Ankkurointikartat :"
+#
+msgid ""
+"At the end of the download session:\n"
+"Go to Toolbox-> Charts->Chart Files\n"
+"Select Scan Charts and Update Database"
+msgstr ""
+"Latausistunon lopussa: \n"
+"Siirry Toolbox-> kartat-> karttatiedostot \n"
+"Valitse Skannaa kartat ja Päivitä tietokanta"
+#
+msgid "Cannot create file '"
+msgstr "Tiedostoa ei voi luoda"
+#
+msgid "Cannot open file '"
+msgstr "Tiedostoa ei voi avata"
+#
+msgid "Cannot read zip entry '"
+msgstr "Ei voi lukea zip tietuetta ”"
+#
+msgid "Clear ALL selections ..."
+msgstr "Tyhjennä KAIKKI valinnat..."
+#
+msgid "Country Anchorage Charts"
+msgstr "Maan Ankkurointikartat"
+#
+msgid "Delete the last download"
+msgstr "Poista viimeinen lataus"
+#
+msgid "Directory for saving chart downloads :"
+msgstr "Karttalatausten tallennuskansio :"
+#
+msgid ""
+"Directory for saving the chart does not exist \n"
 "Please use preferences to select/create a valid directory"
-msgstr "Kartan tallennushakemistoa ei ole\n"
+msgstr ""
+"Kartan tallennushakemistoa ei ole\n"
 "Käytä asetuksia ja valitse/luo kansio"
-
-#: src/vfkapsgui_impl.cpp:245
-msgid "Multi-Charts are not available at this very large scale\n"
-"Please zoom out a little"
-msgstr "Monikartat eivät ole käytettävissä tässä suuressa mittakaavassa\n"
-"Loitonna hieman"
-
-#: src/vfkapsgui_impl.cpp:265 src/vfkapsgui_impl.cpp:267
+#
+msgid "Download Satellite Charts from VentureFarther.com"
+msgstr "Lataa Satelliitti Kartat VentureFarther.com:sta"
+#
 msgid "Download aborted"
 msgstr "Lataaminen keskeytetty"
-
-#: src/vfkapsgui_impl.cpp:274 src/vfkapsgui_impl.cpp:965
-msgid "Download failed.\n\n"
-"Do you have enough credit with VentureFarther?\n"
-"Are you connected to the Internet?"
-msgstr "Lataaminen epäonnistui. \n"
-"Onko sinulla tarpeeksi luottoa VentureFarther: ssa? \n"
-"Oletko yhteydessä Internetiin?"
-
-#: src/vfkapsgui_impl.cpp:277 src/vfkapsgui_impl.cpp:279
-#: src/vfkapsgui_impl.cpp:1207
-msgid "Download failed"
-msgstr "Lataus epäonnistui"
-
-#: src/vfkapsgui_impl.cpp:286 src/vfkapsgui_impl.cpp:288
+#
+msgid ""
+"Download complete\n"
+"about to extract the charts"
+msgstr "Lataaminen valmis, voit purkaa kartat"
+#
 msgid "Download complete, about to extract charts"
 msgstr "Lataaminen valmis, voit purkaa kartat"
-
-#: src/vfkapsgui_impl.cpp:541 src/vfkapsgui_impl.cpp:545
-#: src/vfkapsgui_impl.cpp:549
+#
+msgid "Download failed"
+msgstr "Lataus epäonnistui"
+#
+msgid ""
+"Download failed.\n"
+"\n"
+"Do you have enough credit with VentureFarther?"
+msgstr ""
+"Lataaminen epäonnistui.\n"
+"Onko sinulla tarpeeksi luottoa VentureFarther: ssa?"
+#
+msgid ""
+"Download failed.\n"
+"\n"
+"Do you have enough credit with VentureFarther?\n"
+"Are you connected to the Internet?"
+msgstr ""
+"Lataaminen epäonnistui. \n"
+"Onko sinulla tarpeeksi luottoa VentureFarther: ssa? \n"
+"Oletko yhteydessä Internetiin?"
+#
+msgid "Generate"
+msgstr "Luo"
+#
+msgid "Generate Chart"
+msgstr "Luo kartat"
+#
+msgid "Generate Multi-Chart"
+msgstr "Luo monikartasto"
+#
+msgid "Generate Multi-Charts"
+msgstr "Luo monikartastot"
+#
+msgid ""
+"Go to Toolbox-> Charts->Chart Files\n"
+"Select Scan Charts and Update Database"
+msgstr ""
+"Siirry Toolbox-> kartat-> karttatiedostot \n"
+"Valitse Skannaa kartat ja Päivitä tietokanta"
+#
+msgid "Have you downloaded any charts in this session?"
+msgstr "Oletko ladannut yhtään karttaa tässä istunnossa?"
+#
+msgid "Multi-Chart"
+msgstr "Monikartasto"
+#
+msgid ""
+"Multi-Charts are not available at this very large scale\n"
+"Please zoom out a little"
+msgstr ""
+"Monikartat eivät ole käytettävissä tässä suuressa mittakaavassa\n"
+"Loitonna hieman"
+#
+msgid "Please choose/create your satellite chart directory in Preferences"
+msgstr "Valitse/Luo Satelliittikarttahakemistosi asetuksiin"
+#
+msgid "Please enter your API key in Preferences"
+msgstr "Kirjoita API avain asetuksiisi"
+#
+msgid "Ready for chart download"
+msgstr "Valmiina lataamaan kartat"
+#
+msgid "Ready for marker chart download"
+msgstr "Valmiina lataamaan merkintäkartan"
+#
+msgid "Ready for multi-chart download"
+msgstr "Valmiina lataamaan monikartastot"
+#
+msgid "Satellite Chart Source :"
+msgstr "Satelliitti kartta lähde:"
+#
 #, c-format
 msgid "Satellite Charts extracted to %s"
 msgstr "Satelliittikartat purettu %s: iin"
-
-#: src/vfkapsgui_impl.cpp:560 src/vfkapsgui_impl.cpp:562
-#: src/vfkapsgui_impl.cpp:564
+#
+msgid "Select"
+msgstr "Valitse"
+#
+msgid "Select a folder"
+msgstr "Valitse kansio"
+#
+msgid "Single Chart"
+msgstr "Yksi kartta"
+#
+msgid "Status :"
+msgstr "Tila :"
+#
+msgid ""
+"Surrounding charts are not available at this scale\n"
+"Please zoom in closer or use the single chart page\n"
+"\n"
+"Chart scale needs to be less than 1:300000"
+msgstr ""
+"Ympäristökartat eivät ole käytettävissä tässä mittakaavassa, zoomaa "
+"lähemmäksi tai käytä yksittäiskarttasivua \n"
+"\n"
+"Mittakaavan on oltava alle 1:300000"
+#
 msgid "Unable to extract the charts"
 msgstr "Karttoja ei voi purkaa"
-
-#: src/vfkapsgui_impl.cpp:585
-msgid "Cannot open file '"
-msgstr "Tiedostoa ei voi avata"
-
-#: src/vfkapsgui_impl.cpp:607
-msgid "Cannot read zip entry '"
-msgstr "Ei voi lukea zip tietuetta ”"
-
-#: src/vfkapsgui_impl.cpp:615
-msgid "Cannot create file '"
-msgstr "Tiedostoa ei voi luoda"
-
-#: src/vfkapsgui_impl.cpp:642
-msgid "At the end of the download session:\n"
-"Go to Toolbox-> Charts->Chart Files\n"
-"Select Scan Charts and Update Database"
-msgstr "Latausistunon lopussa: \n"
-"Siirry Toolbox-> kartat-> karttatiedostot \n"
-"Valitse Skannaa kartat ja Päivitä tietokanta"
-
-#: src/vfkapsgui_impl.cpp:924
-msgid "Have you downloaded any charts in this session?"
-msgstr "Oletko ladannut yhtään karttaa tässä istunnossa?"
-
-#: src/vfkapsgui_impl.cpp:928
-msgid "You have chosen to delete the charts from the last download\n"
+#
+msgid "VentureFarther Satellite Charts"
+msgstr "VentureFarther Satelliitti Kartat"
+#
+msgid ""
+"You have chosen to delete the charts from the last download\n"
 "Do you wish to continue?"
-msgstr "Olet päättänyt poistaa karttoja viime latauksesta\n"
+msgstr ""
+"Olet päättänyt poistaa karttoja viime latauksesta\n"
 "Haluatko jatkaa?"
-
-#: src/vfkapsgui_impl.cpp:929
-msgid "Delete the last download"
-msgstr "Poista viimeinen lataus"
-
-#: src/vfkapsgui_impl.cpp:943
-msgid "Go to Toolbox-> Charts->Chart Files\n"
-"Select Scan Charts and Update Database"
-msgstr "Siirry Toolbox-> kartat-> karttatiedostot \n"
-"Valitse Skannaa kartat ja Päivitä tietokanta"
-
-#: src/vfkapsgui_impl.cpp:997
+#
 msgid "fail"
 msgstr "epäonnistui"
-
-#: src/vfkapsgui_impl.cpp:1042 src/vfkapsgui_impl.cpp:1206
-msgid "Download failed.\n\n"
-"Do you have enough credit with VentureFarther?"
-msgstr "Lataaminen epäonnistui.\n"
-"Onko sinulla tarpeeksi luottoa VentureFarther: ssa?"
-
-#: src/vfkapsgui_impl.cpp:1078
-msgid "Clear ALL selections ..."
-msgstr "Tyhjennä KAIKKI valinnat..."
-
-#: src/vfkapsgui_impl.cpp:1211
-msgid "Download complete\n"
-"about to extract the charts"
-msgstr "Lataaminen valmis, voit purkaa kartat"
-
