--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-14 08:25+0000\n"
+"POT-Creation-Date: 2017-12-24 11:59+0000\n"
 "PO-Revision-Date: 2017-11-26 13:50-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: German\n"
@@ -113,13 +113,6 @@ msgstr "Vielfach-Karten erstellen"
 msgid "Generate Multi-Charts"
 msgstr "Vielfach-Karten erstellen"
 #
-msgid ""
-"Go to Toolbox-> Charts->Chart Files\n"
-"Select Scan Charts and Update Database"
-msgstr ""
-"Gehen Sie zur Werkzeuge|karten|Karten-Dateien\n"
-"Wählen Sie \"Scanne Karten und erneuere Datenbank\""
-#
 msgid "Have you downloaded any charts in this session?"
 msgstr "Haben Sie keine Karten in dieser Sitzung heruntergeladen?"
 #
@@ -182,6 +175,14 @@ msgstr ""
 msgid "Unable to extract the charts"
 msgstr "Die Karten konnten nicht extrahiert werden"
 #
+#, fuzzy
+msgid "Unable to update the chart database"
+msgstr "Die Karten konnten nicht extrahiert werden"
+#
+#, fuzzy
+msgid "VentureFarther Marker Detail"
+msgstr "VentureFarther Sat-Karten"
+#
 msgid "VentureFarther Satellite Charts"
 msgstr "VentureFarther Sat-Karten"
 #
@@ -194,3 +195,12 @@ msgstr ""
 #
 msgid "fail"
 msgstr "gescheitert"
+#
+#
+#
+#~ msgid ""
+#~ "Go to Toolbox-> Charts->Chart Files\n"
+#~ "Select Scan Charts and Update Database"
+#~ msgstr ""
+#~ "Gehen Sie zur Werkzeuge|karten|Karten-Dateien\n"
+#~ "Wählen Sie \"Scanne Karten und erneuere Datenbank\""
