--- a/po/fr_FR.po
+++ b/po/fr_FR.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-14 08:25+0000\n"
+"POT-Creation-Date: 2017-12-24 11:59+0000\n"
 "PO-Revision-Date: 2017-11-26 13:50-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: French\n"
@@ -107,11 +107,6 @@ msgstr "Générer plusieurs cartes"
 msgid "Generate Multi-Charts"
 msgstr "Générer plusieurs cartes"
 #
-msgid ""
-"Go to Toolbox-> Charts->Chart Files\n"
-"Select Scan Charts and Update Database"
-msgstr "Sélectioner le scan des cartes et la mise à jour de la base de données"
-#
 msgid "Have you downloaded any charts in this session?"
 msgstr "Avez-vous téléchargé une carte lors de cette session ?"
 #
@@ -174,6 +169,14 @@ msgstr ""
 msgid "Unable to extract the charts"
 msgstr "Impossible d'extraire les cartes"
 #
+#, fuzzy
+msgid "Unable to update the chart database"
+msgstr "Impossible d'extraire les cartes"
+#
+#, fuzzy
+msgid "VentureFarther Marker Detail"
+msgstr "Cartes satellite VentureFarther"
+#
 msgid "VentureFarther Satellite Charts"
 msgstr "Cartes satellite VentureFarther"
 #
@@ -186,3 +189,11 @@ msgstr ""
 #
 msgid "fail"
 msgstr "échec"
+#
+#
+#
+#~ msgid ""
+#~ "Go to Toolbox-> Charts->Chart Files\n"
+#~ "Select Scan Charts and Update Database"
+#~ msgstr ""
+#~ "Sélectioner le scan des cartes et la mise à jour de la base de données"
