--- a/po/nl_NL.po
+++ b/po/nl_NL.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-14 08:25+0000\n"
+"POT-Creation-Date: 2017-12-24 11:59+0000\n"
 "PO-Revision-Date: 2017-11-26 13:49-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Dutch\n"
@@ -108,13 +108,6 @@ msgstr "Genereer meerdere kaarten"
 msgid "Generate Multi-Charts"
 msgstr "Genereer meerdere kaarten"
 #
-msgid ""
-"Go to Toolbox-> Charts->Chart Files\n"
-"Select Scan Charts and Update Database"
-msgstr ""
-"Ga naar Options-> Kaarten-> Kaartbestanden\n"
-"Selecteer Scan kaarten en werk database bij"
-#
 msgid "Have you downloaded any charts in this session?"
 msgstr "Hebt u enige kaarten gedownload in deze sessie?"
 #
@@ -175,6 +168,14 @@ msgstr ""
 msgid "Unable to extract the charts"
 msgstr "Niet mogelijk om de kaarten uit te pakken"
 #
+#, fuzzy
+msgid "Unable to update the chart database"
+msgstr "Niet mogelijk om de kaarten uit te pakken"
+#
+#, fuzzy
+msgid "VentureFarther Marker Detail"
+msgstr "VentureFarther Satelliet Kaarten"
+#
 msgid "VentureFarther Satellite Charts"
 msgstr "VentureFarther Satelliet Kaarten"
 #
@@ -187,3 +188,12 @@ msgstr ""
 #
 msgid "fail"
 msgstr "mislukt"
+#
+#
+#
+#~ msgid ""
+#~ "Go to Toolbox-> Charts->Chart Files\n"
+#~ "Select Scan Charts and Update Database"
+#~ msgstr ""
+#~ "Ga naar Options-> Kaarten-> Kaartbestanden\n"
+#~ "Selecteer Scan kaarten en werk database bij"
